--- a/.gitignore
+++ b/.gitignore
@@ -152,5 +152,5 @@ build/
 out/
 103/.idea
 103/.idea/*
-104/DeployWithGunicorn.mp4
+more_flask/DeployWithGunicorn.mp4
 101/essential_must/test-fresh/santoshr1016-api-test
