--- a/.gitignore
+++ b/.gitignore
@@ -154,3 +154,6 @@ out/
 103/.idea/*
 more_flask/DeployWithGunicorn.mp4
 101/essential_must/test-fresh/santoshr1016-api-test
+harish_hacker
+harish_hacker/*
+
